# SCSSH

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
include/: scssh.h
src/: CMakeLists.txt  main.cpp  ssh.cpp  ssh.h
